# poweranalyses

./: .gitattributes  .gitignore  Cargo.toml  Dioxus.toml  Makefile  README.md  build.jl  build.rs  build.sh  entr-frontend.sh  entr-test.sh  flake.nix  frontend.js  index.html  justfile  main.c  public.sh  serve.sh  shell.nix  style.css
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: CI.yml  ci.yml  gh-pages.yml
app/: Cargo.toml  Dioxus.toml  README.md  index.html  jsconfig.json  package-lock.json  package.json  static  svelte.config.js
app/assets/: frontend.js  manifest.json  pa.js  pa.wasm  sw.js
app/src/: App.svelte  app.html  main.js  main.rs
app/src/assets/: .gitignore
app/src/lib/: Footer.svelte  Input.svelte  Options.svelte  Output.svelte  TestType.svelte
app/src/lib/inputs/: ChiTemplate.svelte  FTemplate.svelte  InputTemplate.svelte  TTemplate.svelte
app/src/routes/: mod.rs
app/src/routes/backend/: mod.rs
app/static/: style.css
assets/: index.html
ll/: README.md  index.html  plus.ll  test.ll
power/: Cargo.toml
power/src/: interface.rs  lib.rs  main.rs  power.rs  string.rs  tests.rs
rust/: .gitignore  Cargo.toml  LICENSE.md  README.md  flake.nix  frontend.js  index.html  shell.nix
rust/src/: dist.rs  distribution.rs  lib.rs  main.rs  nmath.rs  rmath.rs
rust/src/rmath/: pnt.rs  utils.rs
script/: README.md  build.sh  entr-build.sh  entr-frontend.sh  entr-test.sh  entr.sh  public.sh  serve.sh
src/: dist.rs  hyptest.rs  interface.rs  main.rs  nmath.rs  power.rs  rmath.rs  string.rs
src/rmath/: pnt.rs  qnt.rs
tests/: test_javascript.rs
