[package]
name = "pa"
version = "0.1.0"
authors = ["Rik Huijzer <rust@huijzer.xyz>"]
edition = "2021"

[build-dependencies]
cc = "1.0"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
roots = "0.0.7"

[dev-dependencies]
approx = "0.5.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
