[workspace]
members = [
    "app",
    "dist",
    "power"
]
resolver = "2"

[profile.release]
opt-level = "s"   # Small binary size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
