[package]
name = "app"
version = "0.1.0"
authors = ["Jose Storopoli<jose@storopoli.io", "Rik Huijzer <rust@huijzer.xyz>"]
edition = "2021"

[dependencies]
axum = "0.7"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["tracing", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-livereload = { version = "0.9.2", optional = true }
notify = { version = "6.1.1", optional = true }

[build-dependencies]
askama = "0.12"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
livereload = ["dep:tower-livereload", "dep:notify"]
