[package]
name = "app"
version = "0.1.0"
authors = [
    "Jose Storopoli <jose@storopoli.io>",
    "Rik Huijzer <rust@huijzer.xyz>",
]
edition = "2021"

[dependencies]
dioxus = "0.4"
dioxus-web = "0.4"

# Dioxus debug
dioxus-logger = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
debug = ["dioxus-logger", "log"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints.clippy]
enum_glob_use = "deny" # Deny `use Enum::*`
unwrap_used = "deny"   # Deny `.unwrap()`
