[package]
name = "pa"
version = "0.1.0"
authors = ["Rik Huijzer <rust@huijzer.xyz>"]
edition = "2021"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"
roots = "0.0.7"
dist = { path = "../dist" }

[dev-dependencies]
approx = "0.5.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
