[package]
name = "pa"
version = "0.1.0"
authors = ["Rik Huijzer <rust@huijzer.xyz>", "Jose Storopoli<jose@storopoli.io"]
edition = "2021"

[dependencies]
serde_json = "1.0"
roots = "0.0.8"
dist = { path = "../dist" }

[dev-dependencies]
approx = "0.5.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
