[package]
name = "pa"
version = "0.1.0"
authors = ["Rik Huijzer <rust@huijzer.xyz>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
statrs = "0.16.0"

[dev-dependencies]
approx = "0.5.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
