[package]
name = "pa"
version = "0.1.0"
authors = ["Rik Huijzer <rust@huijzer.xyz>"]
edition = "2018"

[build]
target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cc = "1.0"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
libm = "0.2.5"
log = "0.4.17"
statrs = "0.16.0"

[dev-dependencies]
approx = "0.5.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
